@@ -113,6 +113,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - POV-Ray                Carl Fürstenberg
 - PowerShell             Frode Aarebrot
 - Progress               Marco Aurelio de Pasqual
+- Prolog                 Benny Baumann
 - Python                 Roberto Rossi
 - Rails                  Moises Deniz
 - Reg                    SmokingRope
